# constitutional-reliability-rag

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  template.py
backend/app/: dependencies.py  main.py
backend/app/agent/: correction_node.py  evaluate_node.py  generate_node.py  graph.py  planner_node.py  retrieve_node.py  state.py
backend/app/evaluation/: citation_check.py  evaluator.py  faithfulness.py  run_benchmark.py
backend/app/retrieval/: build_index.py  retriever.py  test_retriever.py
backend/app/schemas/: request.py  response.py
backend/app/services/: logging_service.py  rag_pipeline.py
backend/data/: bangladesh-constitution.json  eval_dataset.json
backend/data/processed_chunks/faiss_index/: index.faiss  index.pkl
frontend/: app.py
